--- a/style/main.scss
+++ b/style/main.scss
@@ -6,6 +6,7 @@
 body {
 	height: 100vh;
 	overflow: hidden;
+	margin: 0;
 
 	background: rgb(0, 23, 23);
 	color: white;
@@ -16,6 +17,7 @@ body {
 
 ol {
 	margin: 0;
+	padding: 0;
 
 	li {
 		list-style: none;
